Implement Google OAuth and fix frontend components
- Add Google OAuth authentication with web-based flow (Expo compatible)
- Implement comprehensive authentication system with useAuth hook
- Create reusable UI components (Button, TextInput, Logo, Avatar, etc.)
- Add complete navigation structure with tab and stack navigators
- Implement all main screens (Login, Home, Assets, History, Profile)
- Add Aptos blockchain integration hooks and services
- Create contact management system
- Add comprehensive theming and styling system
- Include Google OAuth setup documentation
- Fix all TypeScript compilation errors
- Remove native Google Sign-In dependency for Expo compatibility
- Add proper error handling and user feedback

--- a/mobile-frontend/app.json
+++ b/mobile-frontend/app.json
@@ -1,19 +1,22 @@
 {
   "expo": {
-    "name": "mobile-frontend",
-    "slug": "mobile-frontend",
+    "name": "Pesto",
+    "slug": "pesto-remittance",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "scheme": "pesto",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pesto.remittance",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,10 +24,13 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.pesto.remittance",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": []
   }
 }
